CVS - 2.1.1-dev
- Fix ingres_prepare() and ingres_execute() so they actually work
- Make sql_safe_mode use ingres.default_database
- ingres_fetch_proc_return should return NULL if no value is available
- Add ingres_unbuffered_query()
- Handle leading white-space characters in query detection (thanks Alex Trofast)

2.1.0
- Add ingres.fetch_buffer_size to configure to the number of rows ingres_query() will fetch.
- Add ingres_charset() to fetch the installation II_CHARSETxx value
- Add ingres.describe ini setting to allow disabling of DESCRIBE INPUT if desired
- Add support for DESCRIBE INPUT
- Add ingres_escape_string()
- Add ingres_result_seek() to support row positioning

2.0.2
- Fix corrupt Ingres MONEY to PHP DOUBLE conversions
- Eliminate memory leak when ingres_free_result() is not called
- Fix ingres_field_name() so it returns the correct column name
- Fix SEGV in php_ii_convert_data() when converting DATE to STRING
- Enable the extension to build on Mac OS X and HP-UX
- Reduce the number of emalloc calls in php_ii_fetch()
- Clean up proto entries in ingres.c
- Make ingres_conn_*() and ingres_stmt_* aliases for their ingres_err*() counterparts

2.0.1
- Improved performance by batch fetching rows
- Improved interoperability when working with older Ingres releases
- Improved cleanup when a transaction/session is prematurely aborted
- Replaced "long long int" with "__int64" to allow the extension to build with VC6
- Use PZVAL_ISREF instead of pointing at (*val)->is_ref
- Added --enable-ingres2 to generate php_ingres2.dll for Windows
- Fixed regression with IIAPI_CP_LOGIN_LOCAL being used at the wrong API level
- Revised PECL_INGRES_VERSION to take in to consideration --enable-ingres2
- Fixed LOB retrieval when used with scollable cursors Ingres 2006 release 3

2.0.0
- Add support for building on OpenVMS
- Initialize value_long_long_str so as not to return a string for all LONG values
- Fix a SEGV when freeing result-sets at different points in the II_LINK list